maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:8: error: not enough arguments for method aMurNord: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
	if ((!aMurNord())&& !getIndication(x,y-1)<=marquage){
                      ^JediEscaper:8: error: value unary_! is not a member of Int
	if ((!aMurNord())&& !getIndication(x,y-1)<=marquage){
                            ^JediEscaper:11: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
  if(!aMurOuest && !getIndication(x-1,y)<=marquage){
      ^JediEscaper:11: error: value unary_! is not a member of Int
  if(!aMurOuest && !getIndication(x-1,y)<=marquage){
                   ^